cloudformation.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "www",
  "Parameters": {
    "amiID": {
      "Type": "String",
      "Default": "ami-60b6c60a"
    },
    "instanceType": {
      "Type": "String",
      "Default": "t2.micro"
    },
    "wwwPort": {
      "Type": "String",
      "Default": "80"
    },
    "vpcCIDR": { "Type": "String" },
    "publicCIDR": { "Type": "String" },
    "wwwStackName": { "Type": "String" },
    "wwwTrustedIP": { "Type": "String" },
    "PrivateKey": { "Type": "String" },
    "KeyName": { "Type": "AWS::EC2::KeyPair::KeyName" }
  },
  "Mappings": {
    "AvailabilityZone": {
      "us-east-1": {
        "AZPublic": "us-east-1a"
      }
    }
  },
  "Resources": {
    "wwwVPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "CidrBlock": { "Ref": "vpcCIDR" },
        "Tags": [
          { "Key": "Name", "Value": { "Ref": "AWS::StackName" } },
          { "Key": "origin", "Value": { "Ref": "AWS::StackName" } } 
        ]
      }
    },
    "wwwSubnetPublic": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::FindInMap": [
            "AvailabilityZone", { "Ref": "AWS::Region" }, "AZPublic"
          ]
        },
        "VpcId": { "Ref": "wwwVPC" },
        "CidrBlock": { "Ref": "publicCIDR" },
        "Tags": [
          { "Key": "Name", "Value": { "Ref": "AWS::StackName" } },
          { "Key": "origin", "Value": { "Ref": "AWS::StackName" } } 
        ]
      }
    },
    "wwwNIChex7" : {
      "Type" : "AWS::EC2::NetworkInterface",
      "Properties" : {
        "SubnetId" : { "Ref" : "wwwSubnetPublic" },
        "Description" :"Network Interface for hex7",
        "GroupSet" : [ {"Ref" : "wwwSecurityGroup"} ],
        "SourceDestCheck" : "true",
        "Tags" : [ 
          { "Key" : "website", "Value" : "hex7"},
          { "Key" : "origin", "Value": { "Ref": "AWS::StackName" } } 
        ]
      }
    },
    "wwwNICdamnswank" : {
      "Type" : "AWS::EC2::NetworkInterface",
      "Properties" : {
        "SubnetId" : { "Ref" : "wwwSubnetPublic" },
        "Description" :"Network Interface for damnswank",
        "GroupSet" : [ {"Ref" : "wwwSecurityGroup"} ],
        "SourceDestCheck" : "true",
        "Tags" : [ 
          { "Key": "website", "Value" : "damnswank" },
          { "Key": "origin", "Value": { "Ref": "AWS::StackName" } } 
        ]
      }
    },
    "wwwEIPhex7" : {
      "Type" : "AWS::EC2::EIP",
      "Properties" : {
        "Domain" : "vpc"
      }
    },
    "wwwEIPdamnswank" : {
      "Type" : "AWS::EC2::EIP",
      "Properties" : {
        "Domain" : "vpc"
      }
    },
    "VpcIPAssocHex7" : {
      "Type" : "AWS::EC2::EIPAssociation",
      "Properties" : {
        "NetworkInterfaceId" : { "Ref" : "wwwNIChex7" },
        "AllocationId" : { "Fn::GetAtt" : [ "wwwEIPhex7", "AllocationId" ]}
      }
    },
    "VpcIPAssocDamnswank" : {
      "Type" : "AWS::EC2::EIPAssociation",
      "Properties" : { 
        "NetworkInterfaceId" : { "Ref" : "wwwNICdamnswank" },
        "AllocationId" : { "Fn::GetAtt" : [ "wwwEIPdamnswank", "AllocationId" ]}
      }
    },
    "wwwInternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [{
          "Key": "Name",
          "Value": { "Ref": "AWS::StackName" }
        }]
      }
    },
    "wwwInternetGatewayAttach": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": { "Ref": "wwwVPC" },
        "InternetGatewayId": { "Ref": "wwwInternetGateway" }
      }
    },
    "wwwRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "wwwVPC" }
      }
    },
    "wwwDefaultRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "wwwRouteTable" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": { "Ref": "wwwInternetGateway" }
      }
    },
    "wwwRouteTableAssociationPublicSubnet": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "wwwSubnetPublic" },
        "RouteTableId": { "Ref": "wwwRouteTable" }
      }
    },
    "wwwSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "www security group",
        "VpcId": { "Ref": "wwwVPC" },
        "Tags": [{
          "Key": "Name",
          "Value": { "Ref": "AWS::StackName" }
        }],
        "SecurityGroupIngress": [{
          "IpProtocol": "tcp",
          "FromPort": "80",
          "ToPort": "80",
          "CidrIp": "0.0.0.0/0"
          }, 
          {
          "IpProtocol": "tcp",
          "FromPort": "22",
          "ToPort": "22",
          "CidrIp": { "Ref": "wwwTrustedIP" }
        }]
      }
    },
    "wwwInstance": {
      "Type": "AWS::EC2::Instance",
      "DependsOn": "wwwInternetGatewayAttach",
      "Properties": {
        "ImageId": { "Ref": "amiID" },
        "InstanceType" : { "Ref": "instanceType" },
        "KeyName": { "Ref": "KeyName" },
        "Tags": [ 
          { "Key": "Name", "Value": { "Ref": "AWS::StackName" } },
          { "Key": "origin", "Value": { "Ref": "AWS::StackName" } }
        ],
        "NetworkInterfaces" : [ 
          { "NetworkInterfaceId" : {"Ref" : "wwwNIChex7"}, "DeviceIndex" : "0" },
          { "NetworkInterfaceId" : {"Ref" : "wwwNICdamnswank"}, "DeviceIndex" : "1" }
        ],
        "UserData" : { "Fn::Base64" : { "Fn::Join" : [ "", [
              "#!/bin/bash\n",
              "yum update -y aws-cfn-bootstrap ec2-net-utils epel-release",
              "\n",
              "ec2ifup eth1",
              "\n",
              "mkdir -pv /var/www",
              "\n",
              "/opt/aws/bin/cfn-init -v ",
              "         --stack ", { "Ref": "AWS::StackName" },
              "         --resource wwwInstance ",
              "         --region ", { "Ref": "AWS::Region" },
              "\n",
              "/opt/aws/bin/cfn-signal -e $? ",
              "         --stack ", { "Ref": "AWS::StackName" },
              "         --resource wwwInstance ",
              "         --region ", { "Ref": "AWS::Region" },
              "\n" ] ] }
        }
      },
      "Metadata": {
        "Comment": "hex7 web server",
        "AWS::CloudFormation::Init": {
          "config": {
            "packages": {
              "yum": {
                "nginx": [],
                "php-fpm": [],
                "jwhois": [],
                "git": []
              }
            },
            "files": {
              "/etc/cfn/cfn-hup.conf": {
                "content": {
                  "Fn::Join": ["", [
                    "[main]\n",
                    "stack=", { "Ref": "AWS::StackId" }, "\n",
                    "region=", { "Ref": "AWS::Region" }, "\n"
                  ]]
                },
                "mode": "000400",
                "owner": "root",
                "group": "root"
              },
              "/etc/cfn/hooks.d/cfn-auto-reloader.conf": {
                "content": {
                  "Fn::Join": ["", [
                    "[cfn-auto-reloader-hook]\n",
                    "triggers=post.update\n",
                    "path=Resources.NandoDemoJenkins.Metadata.AWS::CloudFormation::Init\n",
                    "action=/opt/aws/bin/cfn-init -v ",
                    "         --stack ", { "Ref": "AWS::StackName" },
                    "         --resource NandoDemoJenkins ",
                    "         --region ", { "Ref": "AWS::Region" }, "\n",
                    "runas=root\n"
                  ]]
                }
              },
              "/var/www/cloudformation-stack-name": {
                "content": { "Ref": "AWS::StackName" },
                "mode": "000400",
                "owner": "root",
                "group": "root"
              }
            },
            "commands": {
              "clonerepo1": {
                "command": "git clone https://github.com/nand0p/hex7.git /var/www/www.hex7.com"
              },
              "clonerepo2": {
                "command": "git clone https://github.com/nand0p/damnswank.git /var/www/www.damnswank.com"
              },
              "movefile1": {
                "command": "mv -v hex7/files/www.conf /etc/php-fpm.d/www.conf"
              },
              "movefile2": {
                "command": "mv -v hex7/files/hex7.conf /etc/nginx/conf.d/hex7.conf"
              },
              "movefile3": {
                "command": "mv -v hex7/files/damnswank.com /etc/nginx/conf.d/damnswank.conf"
              }
            },
            "services": {
              "sysvinit": {
                "nginx": {
                  "enabled": "true",
                  "ensureRunning": "true"
                },
                "php-fpm": {
                  "enabled": "true",
                  "ensureRunning": "true"
                },
                "cfn-hup": {
                  "enabled": "true",
                  "ensureRunning": "true",
                  "files": [
                    "/etc/cfn/cfn-hup.conf",
                    "/etc/cfn/hooks.d/cfn-auto-reloader.conf"
                  ]
                }
              }
            }
          }
        }
      }
    }
  },
  "Outputs": {
    "wwwVPC": {
      "Value": { "Ref": "wwwVPC" }
    },
    "wwwSubnetPublic": {
      "Value": { "Ref": "wwwSubnetPublic" }
    },
    "wwwTrustedIP": {
      "Value": { "Ref": "wwwTrustedIP" }
    },
    "wwwEIPhex7" : {
      "Value": { "Ref": "wwwEIPhex7" }
    },
    "wwwEIPdamnswank" : {
      "Value": { "Ref": "wwwEIPdamnswank" }
    },
    "KeyName": {
      "Value": { "Ref": "KeyName" }
    }
  }
}
